# models/auth.go
@@ -1,0 +1,8 @@
+package models
+
+type Register struct {
+	Username string `json:"username"`
+	Password string `json:"password"`
+	Email    string `json:"email"`
+	Phone    string `json:"phone"`
+}
